ci: update lint-staged command

--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vitest": "^2.0.5"
   },
   "lint-staged": {
-    "*": "prettier --write",
+    "*": "prettier --ignore-unknown --write",
     "*.{js,jsx,ts,tsx}": [
       "eslint --max-warnings 0 --fix"
     ]
